--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<!-- <script defer src="../src/app.js"></script> -->
 		<!-- <script defer src="../node_modules/shufflejs/dist/shuffle.js"></script> -->
 	</head>
-	<body class="light">
+	<body class="light" onclick>
 		<nav class="navbar">
 			<ul class="navbar-nav">
 				<li class="nav-item"><a href="#">Home</a></li>
