--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 		/>
 		<script defer id="script" src="bundle.js"></script>
 		<!-- <script defer src="../src/app.js"></script> -->
-		<!-- <script defer src="../node_modules/shufflejs/dist/shuffle.js"></script> -->
 	</head>
 	<body class="light" onclick>
 		<nav class="navbar">
@@ -39,20 +38,20 @@
 					<img src="portrait.jpg" alt="portrait" />
 					<div class="about-text-container">
 						<p>
-							Hi, my name is Taylor Steele. I'm a hotel manager turned software developer. I design
+							Hi, my name is Taylor Steele, I'm a hotel manager turned software developer. I design
 							and build applications for web and mobile devices through clean code and user-centric
 							design.
 						</p>
 						<p>
 							As a tenacious self-taught programmer, I approach every project as an opportunity to
-							challenge my own knowledge and limitations in the pursuit of mastery. I bias towards
-							continuious improvement, and am constantly learning the latest tools and systems.
+							challenge my own knowledge and limitations in the pursuit of mastery. I strive for
+							continuious improvement, and enjoy learning the latest tools and technologies.
 						</p>
 						<p>
 							I'm currently seeking a new developer opportunity that will allow me to leverage my
-							person-centric and team-oriented background and to create compelling customer
-							experiences. So if you're looking for a highly motivated, independent, and
-							hard-working developer to join your team, let's get in touch!
+							person-centric and team-oriented background to create compelling experiences. So if
+							you're looking for a highly motivated, independent, and hard-working developer to join
+							your team, let's get in touch!
 						</p>
 					</div>
 				</div>
