Fixed small mobile view. Added min width.

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 									<h3>Description</h3>
 									<p>
 										Record your walk or hike & see a live track of where you've been. Save your
-										route to your account to see all your previous routes.
+										route to your account to see your previous routes.
 									</p>
 									<h3>Technology</h3>
 									<p>
