--- a/public/index.html
+++ b/public/index.html
@@ -44,14 +44,9 @@
 						</p>
 						<p>
 							As a tenacious self-taught programmer, I approach every project as an opportunity to
-							challenge my own knowledge and limitations in the pursuit of mastery. I strive for
-							continuious improvement, and enjoy learning the latest tools and technologies.
-						</p>
-						<p>
-							I'm currently seeking a new developer opportunity that will allow me to leverage my
-							person-centric and team-oriented background to create compelling experiences. So if
-							you're looking for a highly motivated, independent, and hard-working developer to join
-							your team, let's get in touch!
+							challenge my own knowledge and limitations in the pursuit of mastery. I'm currently
+							seeking a new developer opportunity that will allow me to leverage my person-centric
+							and team-oriented background to create compelling experiences.
 						</p>
 					</div>
 				</div>
